WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285232
Unreviewed older macOS debug build fix after
288322@main
https://bugs.webkit.org/show_bug.cgi?id=285232
Summary
Unreviewed older macOS debug build fix after 288322@main
Chris Dumez
Reported
2024-12-29 14:13:00 PST
Build fix after
288322@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-12-29 14:13:01 PST
<
rdar://problem/142153951
>
Chris Dumez
Comment 2
2024-12-29 14:13:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38417
EWS
Comment 3
2024-12-29 14:16:19 PST
Committed
288325@main
(0fdae78f015a): <
https://commits.webkit.org/288325@main
> Reviewed commits have been landed. Closing PR #38417 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug