Unreviewed older macOS debug build fix after 288322@main https://bugs.webkit.org/show_bug.cgi?id=285232 rdar://142153951

* Source/WebCore/platform/audio/cocoa/AudioSampleBufferList.cpp:
(WebCore::AudioSampleBufferList::copyFrom):

Canonical link: https://commits.webkit.org/288325@main