Source/WebCore/platform/audio/cocoa/AudioSampleBufferList.cpp
@@ -297,7 +297,7 @@ OSStatus AudioSampleBufferList::copyFrom(const AudioBufferList& source, size_t f
     AudioStreamBasicDescription inputFormat;
     UInt32 propertyDataSize = sizeof(inputFormat);
     PAL::AudioConverterGetProperty(converter, kAudioConverterCurrentInputStreamDescription, &propertyDataSize, &inputFormat);
-    ASSERT(frameCount <= source.mBuffers[0].mDataByteSize / inputFormat.mBytesPerPacket);
+    ASSERT(frameCount <= span(source)[0].mDataByteSize / inputFormat.mBytesPerPacket);
 
     AudioConverterFromABLContext context { source, frameCount, inputFormat.mBytesPerPacket };
 
